--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@ body{
 	background-color: whitesmoke;
 	width: 1190px;
 	margin:auto;
+	min-height: 600px;
 }
 
 @media only screen and (max-width: 1190px) {
@@ -382,6 +383,7 @@ div.auxmenu{
 div.index-content{
 	/* height: 30%; */
 	background-color: white;
+	min-height: 600px;
 }
 div.index-agenft{
 	display: flex;
@@ -902,6 +904,7 @@ div.auxmenu{
 div.admin-content{
 	/* height: 30%; */
 	background-color: white;
+	min-height: 600px;
 }
 div.admin-agenft{
 	display: flex;
@@ -1440,10 +1443,61 @@ div.stdft{
 /*CONTENT AREA TABLE-----------------------------------------------------------------*/
 
 
-.admin-cont-alumlist table, .admin-cont-alumlist th, .admin-cont-alumlist td{
+/* .admin-cont-alumlist table, .admin-cont-alumlist th, .admin-cont-alumlist td{
 	border: solid 1px black;
 	border-collapse: collapse;
+} */
+.admin-cont-alumlist{
+	/* width: 100%; */
+	padding: 20px;
+	padding-top: 0px;
+}
+.admin-cont-alumlist table{
+	/* width: 100%; */
+	background-color: rgb(224, 230, 247);
+}
+.admin-cont-alumlist tr:nth-child(odd) {
+	background-color : rgb(193, 207, 245);
+}
+.admin-cont-alumlist tr:nth-child(even) {
+	background-color : rgb(224, 230, 247);
+}
+.admin-cont-alumlist tr:hover {
+	background-color : rgb(247, 224, 224);
+}
+.admin-cont-alumlist tr:active {
+	background-color : rgb(255, 0, 0);
+	color: white;
+}
+
+.admin-cont-alumlist th{
+	/* width: 100%; */
+	background-color: rgb(1, 3, 126);
+	color: white;
 }
 .admin-cont-alumlist table{
 	width: 100%;
+	border-bottom: solid 10px white;
+	/* background-color: rgb(224, 230, 247); */
 }
+.admin-cont-alumlist th{
+	/* width: 100%; */
+	border: solid 10px white;
+	/* background-color: rgb(224, 230, 247); */
+}
+.admin-ca-tblborder{
+	border: solid 10px white;
+	border-bottom: 0px;
+	border-top: 0px;
+	border-collapse: collapse;
+}
+/* .admin-cont-alumlist tr{
+	padding: 10px;
+} */
+.admin-ca-tblcontent{
+	padding: 10px;
+}
+/* .admin-ca-tblcontent:active{
+	padding: 10px;
+	color: white;
+} */
