--- a/index.css
+++ b/index.css
@@ -387,6 +387,7 @@ div.index-content{
 }
 div.index-agenft{
 	display: flex;
+	/* margin-top: 100px; */
 	padding-top: 100px;
 	padding-bottom: 50px;
 	background-color: rgb(235, 239, 250);
@@ -739,6 +740,7 @@ div.stdft{
 }
 .index-cectn-postcover img, .index-cjdctn-post img, .index-cfactn-post img{
 	width: 100%;
+	max-height: 250px;
 }
 .index-cectn-posttitle, .index-cjdctn-posttitle, .index-cfactn-posttitle{
 	color: rgb(1, 3, 126);
